# newlib

./: COPYING.NEWLIB  ChangeLog.csl  config.sub  configure.ac  libtool.m4  release-notes-csl.xml
libgloss/rs6000/: ads-exit.S  crt0.S  mbx-exit.c  mbx-inbyte.c  mbx-outbyte.c  mcount.S  mvme-exit.S  mvme-inbyte.S  mvme-outbyte.S  sim-crt0.S  sim-getrusage.S  simulator.S
newlib/: Makefile.am  Makefile.in  Makefile.shared  configure  configure.host  configure.in
newlib/iconvdata/: configure
newlib/libc/: Makefile.am  Makefile.in  configure  configure.in  libc.texinfo
newlib/libc/aeabi/: Makefile.in  clibabi_signal_fns.S
newlib/libc/argz/: Makefile.in
newlib/libc/ctype/: Makefile.in
newlib/libc/errno/: Makefile.in
newlib/libc/iconv/: Makefile.in
newlib/libc/include/: assert.h  ctype.h  limits.h  locale.h  math.h  signal.h  stdio.h  stdlib.h  string.h  time.h  wchar.h  wctype.h
newlib/libc/locale/: Makefile.in  setlocale.h
newlib/libc/machine/: configure  configure.in
newlib/libc/machine/amdgcn/: Makefile.am  Makefile.in  abort.c  calloc.c  callocr.c  exit.c  free.c  getreent.c  malloc.c  malloc_support.c  mallocr.c  printf.c  putchar.c  puts.c  reallocr.c  vprintf.c  write.c
newlib/libc/misc/: Makefile.in
newlib/libc/posix/: Makefile.in
newlib/libc/reent/: Makefile.in
newlib/libc/search/: Makefile.in
newlib/libc/signal/: Makefile.in
newlib/libc/stdio/: Makefile.in
newlib/libc/stdio64/: Makefile.in
newlib/libc/stdlib/: Makefile.in  __call_atexit.c  mallocr.c  strtod.c
newlib/libm/: configure  libm.texinfo
winsup/cygwin/: nlsfuncs.cc
(+48 files in other folders)
